# quadgrid

./: LICENSE  README.md  pyproject.toml
docs/: README.ipynb  v0.2.0 refactoring tests.ipynb  v0.2.x refactoring tests.ipynb
quadgrid/: __init__.py  distance.py  grid.py  qtree.py  qtree_old.py
