[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quadgrid"
version = "0.2.1"
description = "Quadtree grid generator"
authors = [
           { name = "Mutahar Chalmers", email = "mutahar.chalmers@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.4", "pandas>=2.0", "geopandas>=1.0.0",
  "shapely>=2.0.0", "xarray>=2024.1.0"
]

[project.urls]
"Homepage" = "https://github.com/MutaharChalmers/quadgrid"
